# habit-tracker

./: .gitignore  CLAUDE.md  README.md  SPEC.md  START_UP_INSTRUCTION.md  docker-compose.yml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/commands/: db-migrate.md  phase-done.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: auth.py  habits.py  me.py
backend/app/auth/: dependencies.py  oauth.py
backend/app/core/: config.py  timezone.py
backend/app/db/: session.py
backend/app/models/: __init__.py  check_in.py  habit.py  milestone_notification.py  user.py
backend/app/schemas/: __init__.py  habit.py  user.py
backend/app/services/: habit_service.py  milestone_service.py  streak_service.py  user_service.py
backend/app/websocket/: __init__.py  endpoint.py
backend/tests/: conftest.py  test_auth.py  test_habits.py  test_websocket.py
specs/: spec.MD
